<package>
  <name>tp-rrt</name>
  <version>0.1.0</version>
  <description>
    meshes for rrt implement tp.
  </description>
  <author>Steve Tonneau</author>
  <maintainer email="hpp@laas.fr">Steve Tonneau</maintainer>
  <license>LGPL v2</license>
  <build_depend>hpp-corbaserver</build_depend>
</package>
